syntax = "proto3";
package pb;
option go_package="./pb;pb";

// 请求结构体
message HelloRequest {
  string res = 1;
}

// 返回结构体
message HelloResponse {
  int64 reply = 1;
}

// GRPC服务
service HelloService {
  // 计算字符串长度
  rpc Length(HelloRequest) returns (HelloResponse);

  // 计算字符串长度(grpc流)
  // stream 用于声明流处理
  rpc StreamLength (stream HelloRequest) returns (stream HelloResponse);
}